index.css
.startBtn {
	border-radius: 4px;
	background-color: #C0392B;
	border: none;
	color: #FFFFFF;
	text-align: center;
	padding: 20px;
	width: 200px;
	transition: all 0.35s;
	cursor: pointer;
	margin: 5px;
}


.startBtn .spanStartBtn {
	cursor: pointer;
	display: inline-block;
	position: relative;
	transition: 0.25s;
}
.startBtn .spanStartBtn:after {
	content: '\00bb';
	position: absolute;
	opacity: 0;
	top: 0;
	right: -20px;
	transition: 0.25s;
}
.startBtn:hover .spanStartBtn {
	padding-right: 25px;
}
.startBtn:hover .spanStartBtn:after {
	opacity: 1;
	right: 0;
}


.modalBG {
	width: 100%;
	height: 1000px;
	position: fixed;
	z-index: 1;
	background: rgba(74, 78, 76, .75);
}
.modalText {
	background-image: url('https://images.freecreatives.com/wp-content/uploads/2016/02/Light-Parchment-Texture.jpg');
	
	text-align: center;
	border-radius: 3%;
	top: 10%;
	width: 100%;
	position: absolute;
	left: 50%;
	-webkit-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
 padding-right: 20px;
	padding-left: 20px;
	padding-top: 10px;
	padding-bottom: 10px;
}
.gif{
	width: 25%;
	border: 0;
margin: auto;
}
.modalDiv{
	font-size: 25px;
	margin: 10px;
}

.modalDivsParent{
	margin-top: 5px;
	margin-bottom: 5px;
}
iframe{
	margin: 0;
	
}

header {
	background: rgba(192, 57, 43, .85);
	margin: 5px;
}
.formAndResult{
  text-align: center;
}
body{	
  font-family: Artifika;
	margin: 0;
  height: -webkit-fill-available;
  background: rgba(0,0,0, .75)
}
.startPageBG {
	text-align: center;
	padding: 10px;
}

#formSubmitTraits, #formResetTraits, #formSubmitNames, #formResetNames {
	width: 25%;
	margin-top: 5px;
	margin-bottom: 5px;
	padding: 5px;
}

.waitingLoad{
	font-weight: bold;
  position: relative;
  top: 130px;
  color: #C0392B;
  font-size: 25px;
}

form {
  background-color: rgba(255, 255, 255, .9);	
  padding: 0;
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 10px;
	font-weight: bold;
	border: 1px solid black;
}
fieldset {
	padding: 0;
	border: 0;
}
form:input {
	background-color: #C0392B;
}
#characterSearch{
  margin-bottom: 5px;
}
.cultureSelection, #characterSearch {
	text-align: center;
	display: block;
  margin-left: auto;
  margin-right: auto;
	border: 1px solid grey;
}
h3 {
	text-align: center;
  padding: 2px;
  margin: 0;
}
.orH4 {
	font-size: 27px;
	border: 0;
}

.hidden {
	display: none;
}
/*Covers both the character name form and the character trait form.*/

.characterAndTraits {
  text-align: center;	
  
}
.characterSearchContainer, .traitSearchContainer {
  margin-left: 5px;
  margin-right: 5px;
}
h2 {
	color: #C0392B;
}
header > h1 {
	text-align: center;
  color: black;
  margin: 0;
}
.startButton1 {
	background-image: url(https://c1.staticflickr.com/8/7644/16632632814_e3c1d0631f_b.jpg)
}
.startButton2 {
	background-image: url(http://i.vimeocdn.com/video/521342769_1280x720.jpg)
}
.startPage {
	margin-top: 10px;
	text-align: center;
}
.startButton1, .startButton2 {
	font-family: Artifika;
	height: 250px;
	margin: 1px;
	background-position: center center;
	background-size: cover;
	color: white;
	font-size: 4vw;
	border: 1px solid black;
	border-radius: 5%;
	transition: color .2s, border .2s;
	transition-timing-function: linear;
}
.startButton1:hover, .startButton2:hover {
	border: 5px solid #C0392B;
	/* zoom: 1.5; */
	/* color: #C0392B; */
}
html {
	background: url(https://s-media-cache-ak0.pinimg.com/originals/af/dc/d8/afdcd8e60e9babe40290e4ecf92d7365.jpg) no-repeat center center fixed;
	background-size: cover;
}
.submitReset{
  border: 0;
	color: white;
	background: #C0392B;
	margin-bottom: 5px;
}
.parent {
	margin: 5px;
	text-align: center;
}
.results {
  background: rgba(0,0,0,.25);
  overflow: auto;
  max-height: 259px;

  
}
::-webkit-scrollbar {
  width: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #C0392B; 
}
.resultsDataHeader {

	color: #C0392B;
  text-align: center;
  vertical-align: middle;
}
.image {
	width: 250px;
	height: 250px;
}
.playedByHeader {
	border: 0;
}
h4 {
	text-align: center;
	font-size: 20px;
	color: #C0392B;
	margin: 0;
	border-top: 1px solid #C0392B;
}
.tvSeriesHeader {
	border-top: 0;
	border-bottom: 1px solid #C0392B;
}
.inlineDiv, .tvSeriesHeader {
	color: white;
	font-size: 15px;
	text-align: center;
}
.listedName {
  margin: 0;
  font-size: initial;
	width: 50%;
}
.listedName:visited {
	background-color: #cc2b19;
}
.listedName:hover, .previous:hover, .next:hover, .switchToCharacterName:hover, .switchToTraitSearch:hover {
	background-color: #E74C3C;
}
.listParent {
	font-size: 0;
	padding: 0;
	margin-top: 5px;  
	background: rgba(0,0,0,.75);
	text-align: center;
	
}
.namesList {	
	/* border: 0; */
	
}
.previous, .next, .pageNumber {
	display: inline-block;
	margin-top: 10px;
	background-color: #C0392B;
	width: 100px;
	font-weight: bold;
	border: 1px solid black;
}
button {
	background-color: #C0392B;
	border: 1px solid black;
}
.buttonsParent{
	font-size: 17px;
}
@media only screen and (min-width: 440px) {
  .listParent{
		border: 3px solid #C0392B;
		
  margin: auto;
	width: 94.3%;
  }
  .nonMobile{
    visibility: visible
  }
  body{

    background: initial;
  }
	.startButton1, .startButton2 {
		width: 49%;
	}
	form {
		width: 75%;
  }
  .characterAndTraits{
    display: inline-block;
    width: 48%;
    height: 325px;
    vertical-align: top;
    background: rgba(0,0,0,.75);
    border: 3px solid #C0392B;
    
    
	}
	
  .results{
    background: rgba(0,0,0,.75);
    border: 3px solid #C0392B;
    max-height: initial;
    overflow: auto;
    height: 325px;
    width:  45%;
    display: inline-block;
	}
	.namesList{
    padding: 10px;
		margin-top: 0;
		min-height: 200px;
	}
	.resultsDefault{
		font-size: 25px;
    border: 0;
    color: #C0392B;
    position: relative;
    top: 75px;
		font-weight: bold;
	}

}

@media only screen and (min-width: 840px) {
	.listedName {
		width: 25%;
		font-size: 17px;
	}
}

